--- a/src/Cap00/Abreviaturas.tex
+++ b/src/Cap00/Abreviaturas.tex
@@ -1,15 +1,15 @@
 \chapter*{Lista de Abreviaturas}
 
 \begin{description}
-  \item[UFRN] \quad Universidade Federal do Rio Grande do Norte.
-  \item[UFAL] \quad Universidade Federal de Alagoas.
-  \item[IC] \quad Instituto de Computação.
   \item[DH] \quad Denavit-Hartenberg.
-  \item[RRMC] \quad \emph{Resolved Rate Motion Control}.
-  \item[SVD] \quad \emph{Singular Value Decomposition}.
-  \item[ROS] \quad \emph{Robot Operating System}.
-  \item[RTB] \quad \emph{Robotics Toolbox for Python}.
-  % \item[PID] \quad Controlador Proporcional-Integral-Derivativo.
-  \item[RViz] \quad \emph{ROS Visualization} (ferramenta de visualização do ROS).
+  \item[DoF] \quad \emph{Degrees of Freedom}
+  \item[IC] \quad Instituto de Computação.
   \item[PLA] \quad Ácido Polilático.
+  \item[ROS] \quad \emph{Robot Operating System}.
+  \item[RRMC] \quad \emph{Resolved Rate Motion Control}.
+  \item[RTB] \quad \emph{Robotics Toolbox for Python}.
+  \item[RViz] \quad \emph{ROS Visualization} (ferramenta de visualização do ROS).
+  \item[SVD] \quad \emph{Singular Value Decomposition}.
+  \item[UFAL] \quad Universidade Federal de Alagoas.
+  \item[UFMG] \quad Universidade Federal de Minas Gerais.  
 \end{description}
