--- a/src/Cap00/Abstract.tex
+++ b/src/Cap00/Abstract.tex
@@ -1,7 +1,7 @@
 \chapter*{Abstract}
-\noindent Kinematically redundant manipulators have more degrees of freedom (DOFs) 
+\noindent Kinematically redundant manipulators have more degrees of freedom (DoFs) 
 than necessary to perform a specific task, offering greater flexibility and dexterity 
-in executing trajectories. However, these additional DOFs also introduce greater complexity 
+in executing trajectories. However, these additional DoFs also introduce greater complexity 
 in the manipulator's inverse kinematics, requiring the use of redundancy resolution schemes 
 to find a particular solution that optimizes the manipulator's performance criteria, such as 
 joint speed, manipulability, or distance to obstacles. This work presents a theoretical foundation
