--- a/src/Cap00/Agradecimentos.tex
+++ b/src/Cap00/Agradecimentos.tex
@@ -5,17 +5,14 @@ pelo amor e apoio incondicional ao longo de toda minha formação como ser human
 também durante minha jornada acadêmica. À minha irmã, Andressa, pelo exemplo de perseverança,
 inspiração e por sempre estar ao meu lado, tanto nos momentos de dificuldade como nos de alegria. 
 
-Ao corpo docente do IC em especial aos professores do curso de Engenharia da Computação,
+Ao corpo docente do IC, em especial aos professores do curso de Engenharia da Computação
 Erick de Andrade e Thiago Cordeiro, sou imensamente grato pelo conhecimento compartilhado 
 durante minha formação. Um agradecimento especial ao meu orientador Glauber Leite que me 
-introduziu ao mundo fascinante da robótica, durante o curso e também em alguns projetos de 
-desenvolvimento que tive de oportunidade de participar. Sua orientação, conselhos e paciência 
-foram fundamentais para que esse trabalho chegasse a sua forma final. Do mesmo modo não 
-posso deixar de agradecer ao professor Ícaro Araújo
-pelo acolhimento durante a graduação não só na participação de projetos relevantes para 
-a minha formação, mas também no esforço contínuo em trazer para o ambiente acadêmico do 
-IC o AI-SPARC: um grupo de estudos relevante que une alunos e professores em prol da 
-pesquisa científica.
+introduziu a temas tão interessantes na disciplina de robótica, os quais culminaram na principal 
+motivação para que esta produção acadêmica tomasse sua forma final. Agradeço também ao professor Ícaro Araújo
+pelo conhecimento compartilhado durante a graduação não só nas disciplinas de controle, mas também na
+participação do AI-SPARC: um grupo de estudos que une integrantes de diversas áreas em prol da divulgação e da pesquisa 
+científica.
 
 Ao corpo administrativo do instituto, especialmente à secretaria, em nome do 
 técnico Marcelo de Gusmão, agradeço pela eficiência e suporte contínuo, garantindo 
