--- a/src/Cap00/Resumo.tex
+++ b/src/Cap00/Resumo.tex
@@ -1,7 +1,7 @@
 \chapter*{Resumo}
-\noindent Manipuladores cinematicamente redundantes possuem mais graus de liberdade (DOFs) do 
+\noindent Manipuladores cinematicamente redundantes possuem mais graus de liberdade (DoFs) do 
 que o necessário para realizar uma tarefa específica, oferecendo maior flexibilidade e destreza na execução de trajetórias. 
-No entanto, esses DOFs adicionais também introduzem uma maior complexidade na cinemática inversa do manipulador, sendo necessário 
+No entanto, esses DoFs adicionais também introduzem uma maior complexidade na cinemática inversa do manipulador, sendo necessário 
 recorrer a esquemas de resolução de redundância, para encontrar uma solução particular otimizando critérios de desempenho do manipulador,
 como velocidade das juntas, manipulabilidade ou distância para obstáculos. Este trabalho, apresenta uma fundamentação teórica sobre 
 os principais pontos relativos a cinemática inversa diferencial voltada para manipuladores redundantes. Para validar a metodologia proposta,
