--- a/src/Ref/SampleReferences.bib
+++ b/src/Ref/SampleReferences.bib
@@ -22,7 +22,7 @@
 }
 
 @inproceedings{kuri2023som,
-  title        = {SOM Network with Weighted Least Norm Matrix Based Redundancy Resolution for a 5-DOF Spatial Robotic Manipulator},
+  title        = {SOM Network with Weighted Least Norm Matrix Based Redundancy Resolution for a 5-DoF Spatial Robotic Manipulator},
   author       = {Kuri, Saumitra Kumar and Halder, Kaushik and Orlando, M Felix},
   booktitle    = {2023 7th International Conference on Computer Applications in Electrical Engineering-Recent Advances (CERA)},
   pages        = {1--6},
