--- a/src/main.tex
+++ b/src/main.tex
@@ -9,6 +9,7 @@
 \usepackage{booktabs}
 \usepackage{algpseudocode, algorithm}
 \usepackage{hyperref}
+\usepackage{pdfpages}
 
 \DeclareMathOperator*{\argmin}{arg\,min}
 
@@ -27,7 +28,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \capa{}
 \folhaDeRosto{}
-\folhaDeAprovacao{}
+\includepdf{./ficha-catalografica.pdf}
+\includepdf{./ata-assinada.pdf}
+%\folhaDeAprovacao{}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % %
 % Opcionais % % % % % % % % % % % % % % % % % % % % %
